# AndroGPT

./: .gitignore  LICENSE  README.md  build.gradle.kts  debug_logs.ps1  gradle.properties  settings.gradle.kts
.github/: copilot-instructions.md
app/: build.gradle.kts  proguard-rules.pro
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  README.md  llama_jni.cpp
app/src/main/java/com/androgpt/yaser/: AndroGPTApplication.kt
app/src/main/java/com/androgpt/yaser/data/inference/: LlamaEngine.kt  ModelManager.kt
app/src/main/java/com/androgpt/yaser/data/local/: ChatDatabase.kt  GenerationPreferences.kt  ModelPreferences.kt
app/src/main/java/com/androgpt/yaser/data/local/dao/: ConversationDao.kt  MessageDao.kt
app/src/main/java/com/androgpt/yaser/data/local/entity/: ConversationEntity.kt  MessageEntity.kt
app/src/main/java/com/androgpt/yaser/data/notification/: DownloadNotificationManager.kt
app/src/main/java/com/androgpt/yaser/data/repository/: ChatRepositoryImpl.kt  InferenceRepositoryImpl.kt  ModelDownloadRepository.kt  ModelRepositoryImpl.kt
app/src/main/java/com/androgpt/yaser/data/service/: ModelDownloadService.kt
app/src/main/java/com/androgpt/yaser/di/: DatabaseModule.kt  InferenceModule.kt  RepositoryModule.kt
app/src/main/java/com/androgpt/yaser/domain/model/: Conversation.kt  DownloadState.kt  DownloadableModel.kt  GenerationState.kt  Message.kt  ModelConfig.kt  ModelInfo.kt
app/src/main/java/com/androgpt/yaser/domain/repository/: ChatRepository.kt  InferenceRepository.kt  ModelRepository.kt
app/src/main/java/com/androgpt/yaser/domain/usecase/: LoadModelUseCase.kt  SendMessageUseCase.kt
app/src/main/java/com/androgpt/yaser/domain/util/: ChatNameGenerator.kt
app/src/main/java/com/androgpt/yaser/presentation/: MainActivity.kt  MainScreen.kt
app/src/main/java/com/androgpt/yaser/presentation/chat/: ChatScreen.kt  ChatViewModel.kt  ConversationListDialog.kt
app/src/main/java/com/androgpt/yaser/presentation/models/: ModelDownloadScreen.kt  ModelDownloadViewModel.kt  ModelsScreen.kt  ModelsViewModel.kt
app/src/main/java/com/androgpt/yaser/presentation/settings/: SettingsScreen.kt  SettingsViewModel.kt
app/src/main/java/com/androgpt/yaser/presentation/theme/: Theme.kt  Type.kt
app/src/main/res/values/: strings.xml  themes.xml
